Lwt client for fib server

--- a/lwt-server/dune
+++ b/lwt-server/dune
@@ -15,3 +15,9 @@
  (modules fibp)
  (libraries lwt lwt.unix)
  (preprocess (pps lwt_ppx)))
+
+(executable
+ (name client)
+ (modules client)
+ (libraries lwt lwt.unix)
+ (preprocess (pps lwt_ppx)))
