--- a/roots/dune
+++ b/roots/dune
@@ -1,4 +1,9 @@
 (executable
- (name globroots)
- (libraries domainslib)
- (foreign_stubs (language c) (names globrootsprim)))
+ (name globroots_sp)
+ (modules globroots_sp)
+ (libraries domainslib globroots))
+
+(executable
+ (name globroots_mp)
+ (modules globroots_mp)
+ (libraries globroots))
